# hero-of-the-overworld

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  Trunk.toml  build.rs  hoto_gamepads.js  hoto_storage.js  index.html  mkdocs.yml  rust-toolchain.toml
.github/workflows/: docs.yml  release.yml
assets/data/: game.ron  meta.ron
assets/data/characters/: axeman.ron  captain.ron  hermit.ron  mage.ron  swordsman.ron
assets/data/cutscenes/: axeman_joins.ron  captain_joins.ron  castawayshore_intro.ron  charreddepths_intro.ron  demon_king_rise.ron  demonfacility_intro.ron  gareth_joins.ron  greenwood_intro.ron  harborwatch_intro.ron  mage_joins.ron  travellersend_intro.ron  underworld_portal.ron
assets/data/encounters/: archer_duo.ron  ballista_battery.ron  ballista_crew.ron  ballista_nest.ron  ballista_pit.ron  beachcrab_pair.ron  beachcrab_trio.ron  crab_pair.ron  crab_trio.ron  demon_duo.ron  demon_elite_solo.ron  demon_guard.ron  demon_king.ron  demon_orc.ron  demon_orcs.ron  demon_solo.ron  demon_trio.ron  dragon_boss.ron  elite_demons.ron  elite_guard.ron  elite_pair.ron  elite_trio.ron  gargoyle_duo.ron  gargoyle_solo.ron  goblin_pack.ron  goblin_pair.ron  gunner_line.ron  knight_demon.ron  knight_duo.ron  knight_guard.ron  knight_skeletons.ron  knight_solo.ron  mimic_pair.ron  mimic_solo.ron  minotaur_boss.ron  mirror_match.ron  orc_duo.ron  orc_goblins.ron  orc_solo.ron  orc_trio.ron  (+8 more)
assets/data/enemies/: archer_goblin.ron  ballista.ron  beach_crab.ron  clone_brenn.ron  clone_captain.ron  clone_elara.ron  clone_gareth.ron  clone_roland.ron  club_goblin.ron  dark_knight.ron  demon.ron  demon_elite.ron  demon_king.ron  dragon.ron  gargoyle.ron  mimic.ron  minotaur.ron  mountain_crab.ron  orc_brute.ron  pirate_captain.ron  pirate_grunt.ron  pirate_gunner.ron  skeleton.ron  slime.ron
assets/data/equipment/: battle_axe.ron  cavalry_lance.ron  iron_sword.ron  leather_armor.ron  scouts_cloak.ron  scouts_edge.ron  stone_fists.ron  travelers_robe.ron
assets/data/items/: bomb.ron  ether.ron  guard_salve.ron  hi_potion.ron  might_tonic.ron  potion.ron
assets/data/levels/: castawayshore.ron  charreddepths.ron  demonfacility.ron  demonfortress.ron  greenwood.ron  harborwatch.ron  stonepass.ron  travellersend.ron
assets/data/maps/castawayshore/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv
assets/data/maps/charreddepths/: 0.csv  1.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
assets/data/maps/demonfacility/: 0.csv  1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
assets/data/maps/demonfortress/: 0.csv  1.csv  2.csv  4.csv  5.csv
assets/data/maps/greenwood/: 0.csv  1.csv  2.csv  3.csv  4.csv
assets/data/maps/harborwatch/: 0.csv  1.csv  2.csv
assets/data/maps/stonepass/: 0.csv  1.csv  2.csv  3.csv  4.csv
assets/data/maps/travellersend/: 0.csv  1.csv  10.csv  11.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
assets/data/npcs/: axeman.ron  farmer.ron
assets/data/shops/: greenwood_outfitter.ron  harborwatch_store.ron
assets/data/skills/: all_hands.ron  arrow_shot.ron  axe_boomerang.ron  axe_throw.ron  ballista_bolt.ron  broadside.ron  brute_slam.ron  claw.ron  cleave.ron  club_smash.ron  final_cut.ron  fireball.ron  firebolt.ron  flame_breath.ron  frost.ron  goring_charge.ron  lance_charge.ron  mend.ron  musket_shot.ron  oblivion.ron  pistol_shot.ron  power_strike.ron  quick_slash.ron  reap.ron  sovereign_smite.ron  sunder.ron  swallow_cut.ron  tail_swipe.ron  trample.ron  whirlwind.ron
assets/data/statuses/: burn.ron  guard.ron  might.ron
assets/textures/ui/dialogue/: NOTICE  axeman.txt  captain.txt  demon_king.txt  farmer.txt  knight.txt  mage.txt  princess.txt  scout.txt
docs/: battles.md  controls.md  credits.md  equipment.md  gameplay.md  getting-started.md  index.md  items.md  modding.md  shops.md  story.md  world.md
docs/entities/: archer_goblin.md  ballista.md  beach_crab.md  captain.md  clones.md  club_goblin.md  dark_knight.md  demon.md  demon_elite.md  demon_king.md  dragon.md  elara.md  gareth.md  gargoyle.md  index.md  mimic.md  minotaur.md  mountain_crab.md  orc_brute.md  pirate_grunt.md  pirate_gunner.md  roland.md  skeleton.md  slime.md
docs/overrides/partials/: comments.html
shaders/: sprite.wgsl
src/: app.rs  audio.rs  battle.rs  cutscene.rs  data.rs  devtools.rs  game.rs  input.rs  input_config.rs  inventory.rs  lib.rs  main.rs  overworld.rs  party.rs  renderer.rs  save.rs  shop.rs  util.rs
tests/: data.rs  e2e.rs
tests/common/: mod.rs
