[package]
name = "hero-of-the-overworld"
version = "0.1.0"
edition = "2021"
description = "A basic but extensible JRPG built with wgpu + winit (native) and trunk (web)."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

# Native binary. Named `hero` so tests can find it via CARGO_BIN_EXE_hero.
[[bin]]
name = "hero"
path = "src/main.rs"

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cfg-if = "1.0.4"
glam = { version = "0.33.2", features = ["bytemuck"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.33"
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }
web-time = "1.1.0"
wgpu = "30.0.0"
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.11"
pollster = "0.4.0"
# Background music (native only). Vorbis for the .ogg tracks; drop the other
# default decoders we don't ship to keep the build lean.
rodio = { version = "0.20", default-features = false, features = ["vorbis"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
js-sys = "0.3.103"
# Enable the WebGL2 backend (in addition to the default WebGPU) so the game
# still runs on browsers/systems without WebGPU. wgpu prefers WebGPU when
# available and falls back to WebGL2. The `webgl` feature is merged additively
# with the shared `wgpu` dependency's defaults, so native builds are unaffected.
wgpu = { version = "30.0.0", features = ["webgl"] }
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
    # Background music: build an object URL from the embedded OGG and play it
    # through an <audio> element.
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAudioElement",
    "HtmlMediaElement",
] }

[dev-dependencies]
rustautogui = "2.5"
# Used by the e2e suite to load/analyse screenshots and generate templates.
image = { version = "0.25.10", default-features = false, features = ["png"] }
