[package]
name = "hero-of-the-overworld"
version = "0.1.0"
edition = "2021"
description = "A basic but extensible JRPG built with macroquad (native + web)."
license = "AGPL-3.0-only"

[lib]
crate-type = ["rlib"]

# Native binary. Named `hero` so tests can find it via CARGO_BIN_EXE_hero, and so
# the web build produces `hero.wasm`.
[[bin]]
name = "hero"
path = "src/main.rs"

[profile.release]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[dependencies]
# macroquad provides the window, GL rendering, input, and audio on both native
# and web (WebGL), so the game no longer maintains its own wgpu/winit stack.
# `audio` is not in macroquad's default features, so enable it for music.
macroquad = { version = "0.4", features = ["audio"] }
glam = "0.33.2"
log = "0.4.33"
ron = "0.12.2"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.11"

[dev-dependencies]
rustautogui = "2.5"
# Used by the e2e suite to load/analyse screenshots and generate templates.
image = { version = "0.25.10", default-features = false, features = ["png"] }
